deployments/owncloud/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: owncloud
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
