deployments/owncloud/owncloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
spec:
  type: NodePort
  selector:
    app: owncloud
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30082
