deployments/owncloud/route-owncloud.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: owncloud
  namespace: owncloud
spec:
  host: "owncloud.apps.microshift.lab"
  to:
    kind: Service
    name: owncloud
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
